syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ProductInventoryProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Inventory Item
message InventoryItemFlatData {
    option (routines.entity_type) = "InventoryItem";
    option (routines.keys).keys = "inventory_item_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: inventoryItemId
    string inventory_item_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string inventory_item_type_id = 2 [(routines.opts).field_type = "id"];
    string product_id = 3 [(routines.opts).field_type = "id"];
    string party_id = 4 [(routines.opts).field_type = "id"];
    string owner_party_id = 5 [(routines.opts).field_type = "id"];
    string status_id = 6 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp datetime_received = 7 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp datetime_manufactured = 8 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp expire_date = 9 [(routines.opts).field_type = "date-time"];
    string facility_id = 10 [(routines.opts).field_type = "id"];
    string container_id = 11 [(routines.opts).field_type = "id"];
    string lot_id = 12 [(routines.opts).field_type = "id"];
    string uom_id = 13 [(routines.opts).field_type = "id"];
    string bin_number = 14 [(routines.opts).field_type = "id"];
    string location_seq_id = 15 [(routines.opts).field_type = "id"];
    string comments = 16 [(routines.opts).field_type = "comment"];
    routines.FixedPoint quantity_on_hand_total = 17 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint available_to_promise_total = 18 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint accounting_quantity_total = 19 [(routines.opts).field_type = "fixed-point"];
    string serial_number = 20 [(routines.opts).field_type = "value"];
    string soft_identifier = 21 [(routines.opts).field_type = "value"];
    string activation_number = 22 [(routines.opts).field_type = "value"];
    google.protobuf.Timestamp activation_valid_thru = 23 [(routines.opts).field_type = "date-time"];
    routines.FixedPoint unit_cost = 24 [(routines.opts).field_type = "fixed-point"];
    string currency_uom_id = 25 [(routines.opts).field_type = "id"];
    string fixed_asset_id = 26 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 27 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 28 [(routines.opts).field_type = "date-time"];
    string tenant_id = 29 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 63;
    map<string, google.protobuf.Any> attachments = 64 ;
}

message InventoryItemKey{
    string inventory_item_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message InventoryItemList{
    repeated InventoryItemFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListInventoryItems` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Inventory Item Detail
message InventoryItemDetailData {
    option (routines.entity_type) = "InventoryItemDetail";
    option (routines.keys).keys = "inventory_item_id, inventory_item_detail_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: inventoryItemId, inventoryItemDetailSeqId
    // fields
    string inventory_item_id = 1 [(routines.opts).field_type = "id"];
    string inventory_item_detail_seq_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp effective_date = 3 [(routines.opts).field_type = "date-time"];
    routines.FixedPoint quantity_on_hand_diff = 4 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint available_to_promise_diff = 5 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint accounting_quantity_diff = 6 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint unit_cost = 7 [(routines.opts).field_type = "fixed-point"];
    string order_id = 8 [(routines.opts).field_type = "id"];
    string order_item_seq_id = 9 [(routines.opts).field_type = "id"];
    string ship_group_seq_id = 10 [(routines.opts).field_type = "id"];
    string shipment_id = 11 [(routines.opts).field_type = "id"];
    string shipment_item_seq_id = 12 [(routines.opts).field_type = "id"];
    string return_id = 13 [(routines.opts).field_type = "id"];
    string return_item_seq_id = 14 [(routines.opts).field_type = "id"];
    string work_effort_id = 15 [(routines.opts).field_type = "id"];
    string fixed_asset_id = 16 [(routines.opts).field_type = "id"];
    string maint_hist_seq_id = 17 [(routines.opts).field_type = "id"];
    string item_issuance_id = 18 [(routines.opts).field_type = "id"];
    string receipt_id = 19 [(routines.opts).field_type = "id"];
    string physical_inventory_id = 20 [(routines.opts).field_type = "id"];
    string reason_enum_id = 21 [(routines.opts).field_type = "id"];
    string description = 22 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 23 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 24 [(routines.opts).field_type = "date-time"];
    string id = 25 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 37;
    map<string, google.protobuf.Any> attachments = 38;
}


message InventoryItemDetailKey{
    string inventory_item_id = 1 [(routines.opts).field_type = "id"];
    string inventory_item_detail_seq_id = 2 [(routines.opts).field_type = "id"];
}

message InventoryItemDetailList{
    repeated InventoryItemDetailData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListInventoryItemDetails` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


